--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -1,9 +1,8 @@
 // hay dos tipos de secciones las que ocupan todo el viewport y las normales
 
 .xlc-section-vp {
-    width: 100vw;
-    height: 100vh;
-    max-width:100%;
+    width: 100%;
+    min-height: 100vh;
 }
 
 // para usar estas clases hay que poner en el contenedor (xlc-container) un after y poner de background la imagen para aplicar el efecto
@@ -105,12 +104,17 @@
 }
 
 .xlc-index-presentacion-section {
+    max-height: 100vh;
+    height: 100%;
+    min-height: 0;
+
     & > * {
         width: 100% !important;
         height: 100% !important;
     }
 
     .xlc-video-container {
+        display: block;
         width: 100% !important;
         height: 100% !important;
         background-color: var(--xlc-black);
@@ -490,11 +494,13 @@
         }
 
         .wp-video {
+            display: block;
             grid-area: video;
             width: 100% !important;
             height: 100% !important;
 
             .xlc-video-container {
+                display: block;
                 width: 100% !important;
                 height: 100% !important;
             }
