--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -6,7 +6,8 @@
 }
 
 // para usar estas clases hay que poner en el contenedor (xlc-container) un after y poner de background la imagen para aplicar el efecto
-.xlc-multiply-background, .xlc-color-background {
+.xlc-multiply-background,
+.xlc-color-background {
     position: relative;
 
     &::after {
@@ -23,11 +24,17 @@
         background-size: cover;
     }
 }
-.xlc-multiply-background::after { background-color: var(--xlc-beige); background-blend-mode: multiply; }
+.xlc-multiply-background::after {
+    background-color: var(--xlc-beige);
+    background-blend-mode: multiply;
+}
 .xlc-color-background {
     background-color: var(--xlc-beige);
 
-    &::after { mix-blend-mode: luminosity; opacity: .32; }
+    &::after {
+        mix-blend-mode: luminosity;
+        opacity: 0.32;
+    }
 }
 
 // ---------------------------
@@ -42,53 +49,71 @@
 
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title . . newsletter newsletter newsletter newsletter ."
-            "subtitle subtitle subtitle subtitle subtitle subtitle . newsletter newsletter newsletter newsletter .";
+        grid-template-areas:
+            'title title title title title . . newsletter newsletter newsletter newsletter .'
+            'subtitle subtitle subtitle subtitle subtitle subtitle . newsletter newsletter newsletter newsletter .';
 
-        .xlc-title { grid-area: title; color: var(--xlc-white); }
-        .xlc-subtitle { grid-area: subtitle; color: var(--xlc-white); }
-        .xlc-newsletter { grid-area: newsletter; }
+        .xlc-title {
+            grid-area: title;
+            color: var(--xlc-white);
+        }
+        .xlc-subtitle {
+            grid-area: subtitle;
+            color: var(--xlc-white);
+        }
+        .xlc-newsletter {
+            grid-area: newsletter;
+        }
     }
 
-    &::after { background-image: url('../img/index/index-init.png'); }
+    &::after {
+        background-image: url('../img/index/index-init.png');
+    }
 }
 
 .xlc-index-nosotros-section {
     .xlc-grid {
         grid-template-rows: auto auto auto;
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "card1 card1 card1 card1 card2 card2 card2 card2 card3 card3 card3 card3"
-            ". . . . . . . . btn btn btn .";
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'card1 card1 card1 card1 card2 card2 card2 card2 card3 card3 card3 card3'
+            '. . . . . . . . btn btn btn .';
 
-        .xlc-title { 
-            grid-area: title; 
+        .xlc-title {
+            grid-area: title;
             margin-bottom: 6rem;
         }
-        .xlc-enum-card:nth-of-type(1) { grid-area: card1; }
-        .xlc-enum-card:nth-of-type(2) { grid-area: card2; }
-        .xlc-enum-card:nth-of-type(3) { grid-area: card3; }
+        .xlc-enum-card:nth-of-type(1) {
+            grid-area: card1;
+        }
+        .xlc-enum-card:nth-of-type(2) {
+            grid-area: card2;
+        }
+        .xlc-enum-card:nth-of-type(3) {
+            grid-area: card3;
+        }
         .xlc-orange-btn {
             grid-area: btn;
             justify-self: stretch;
         }
     }
 
-    &::after { background-image: url('../img/index/index-background1.png'); }
+    &::after {
+        background-image: url('../img/index/index-background1.png');
+    }
 }
 
 .xlc-index-colabora-section {
     background-color: var(--xlc-beige);
-    
+
     .xlc-grid {
         grid-template-rows: auto auto 1fr;
-        grid-template-areas: 
-            "title title title title img1 img1 img1 img1 img2 img2 img2 img2"
-            "description description description description img1 img1 img1 img1 img2 img2 img2 img2"
-            "btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2";
+        grid-template-areas:
+            'title title title title img1 img1 img1 img1 img2 img2 img2 img2'
+            'description description description description img1 img1 img1 img1 img2 img2 img2 img2'
+            'btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2';
 
-        .xlc-title { 
+        .xlc-title {
             grid-area: title;
             font-size: var(--xlc-xl-font-size);
             line-height: 133px;
@@ -97,9 +122,15 @@
             grid-area: description;
             margin-bottom: 2.375rem;
         }
-        .xlc-orange-btn { grid-area: btn; }
-        .xlc-img-card:nth-of-type(1) { grid-area: img1; }
-        .xlc-img-card:nth-of-type(2) { grid-area: img2; }
+        .xlc-orange-btn {
+            grid-area: btn;
+        }
+        .xlc-img-card:nth-of-type(1) {
+            grid-area: img1;
+        }
+        .xlc-img-card:nth-of-type(2) {
+            grid-area: img2;
+        }
     }
 }
 
@@ -127,12 +158,16 @@
     .xlc-grid {
         margin-bottom: 5.5rem;
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title title"
-            "description description description description description description";
+        grid-template-areas:
+            'title title title title title title'
+            'description description description description description description';
 
-        .xlc-title { grid-area: title; }
-        .xlc-subtitle { grid-area: description; }
+        .xlc-title {
+            grid-area: title;
+        }
+        .xlc-subtitle {
+            grid-area: description;
+        }
     }
 
     .xlc-projects-list {
@@ -145,10 +180,11 @@
 
     .xlc-grid {
         margin-bottom: 5.5rem;
-        grid-template-areas: 
-            "title title title title title title";
+        grid-template-areas: 'title title title title title title';
 
-        .xlc-title { grid-area: title; }
+        .xlc-title {
+            grid-area: title;
+        }
     }
 
     .xlc-marcas-list {
@@ -165,26 +201,36 @@
 
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title ."
-            "subtitle subtitle subtitle subtitle subtitle subtitle";
+        grid-template-areas:
+            'title title title title title .'
+            'subtitle subtitle subtitle subtitle subtitle subtitle';
 
-        .xlc-title { grid-area: title; color: var(--xlc-white); }
-        .xlc-subtitle { grid-area: subtitle; color: var(--xlc-white); }
-    }  
+        .xlc-title {
+            grid-area: title;
+            color: var(--xlc-white);
+        }
+        .xlc-subtitle {
+            grid-area: subtitle;
+            color: var(--xlc-white);
+        }
+    }
 
-    &::after { background-image: url('../img/nosotros/nosotros-init.png'); }
+    &::after {
+        background-image: url('../img/nosotros/nosotros-init.png');
+    }
 }
 
 .xlc-nosotros-info-section {
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "description description description description description . valores valores valores ods ods ods";
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'description description description description description . valores valores valores ods ods ods';
         row-gap: 13rem;
-        
-        .xlc-title { grid-area: title; }
+
+        .xlc-title {
+            grid-area: title;
+        }
         .xlc-description {
             grid-area: description;
             font-size: var(--xlc-xs-font-size);
@@ -193,7 +239,9 @@
         .xlc-valores {
             grid-area: valores;
 
-            .xlc-valores-title { font-size: var(--xlc-m-font-size); }
+            .xlc-valores-title {
+                font-size: var(--xlc-m-font-size);
+            }
             .xlc-valores-list li {
                 padding: 1rem 0;
                 border-top: 1px solid var(--xlc-gray);
@@ -203,7 +251,9 @@
         .xlc-ods {
             grid-area: ods;
 
-            .xlc-ods-title { font-size: var(--xlc-m-font-size); }
+            .xlc-ods-title {
+                font-size: var(--xlc-m-font-size);
+            }
             .xlc-ods-list li {
                 display: flex;
                 align-items: center;
@@ -216,14 +266,14 @@
                     align-items: center;
                     width: 1.85rem;
                     height: 1.85rem;
-                    margin-right: .8rem;
+                    margin-right: 0.8rem;
 
                     color: var(--xlc-beige);
                     font-weight: bold;
                     font-size: var(--xlc-xs-font-size);
 
                     background-color: var(--xlc-black);
-                    border-radius: 50%; 
+                    border-radius: 50%;
                 }
             }
             .xlc-ods-info {
@@ -233,7 +283,9 @@
         }
     }
 
-    &::after { background-image: url('../img/nosotros/nosotros-background1.png'); }
+    &::after {
+        background-image: url('../img/nosotros/nosotros-background1.png');
+    }
 }
 
 .xlc-nosotros-integrantes-section {
@@ -248,7 +300,7 @@
             grid-column: span 3;
         }
 
-        .xlc-img-card:nth-child(-n+3) {
+        .xlc-img-card:nth-child(-n + 3) {
             grid-column: span 2;
         }
     }
@@ -264,38 +316,54 @@
 
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title ."
-            "subtitle subtitle subtitle subtitle subtitle subtitle";
+        grid-template-areas:
+            'title title title title title .'
+            'subtitle subtitle subtitle subtitle subtitle subtitle';
 
-        .xlc-title { grid-area: title; color: var(--xlc-white); }
-        .xlc-subtitle { grid-area: subtitle; color: var(--xlc-white); }
-    }  
+        .xlc-title {
+            grid-area: title;
+            color: var(--xlc-white);
+        }
+        .xlc-subtitle {
+            grid-area: subtitle;
+            color: var(--xlc-white);
+        }
+    }
 
-    &::after { background-image: url('../img/proyecto/proyectos-init.png'); }
+    &::after {
+        background-image: url('../img/proyecto/proyectos-init.png');
+    }
 }
 
 .xlc-proyectos-info-section {
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "card1 card1 card1 card1 card2 card2 card2 card2 card3 card3 card3 card3";
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'card1 card1 card1 card1 card2 card2 card2 card2 card3 card3 card3 card3';
 
-        .xlc-title { 
-            grid-area: title; 
+        .xlc-title {
+            grid-area: title;
             margin-bottom: 20rem;
         }
-        .xlc-enum-card:nth-of-type(1) { grid-area: card1; }
-        .xlc-enum-card:nth-of-type(2) { grid-area: card2; }
-        .xlc-enum-card:nth-of-type(3) { grid-area: card3; }
+        .xlc-enum-card:nth-of-type(1) {
+            grid-area: card1;
+        }
+        .xlc-enum-card:nth-of-type(2) {
+            grid-area: card2;
+        }
+        .xlc-enum-card:nth-of-type(3) {
+            grid-area: card3;
+        }
         .xlc-orange-btn {
             grid-area: btn;
             justify-self: stretch;
         }
     }
-    
-    &::after { background-image: url('../img/proyecto/proyectos-background1.png'); }
+
+    &::after {
+        background-image: url('../img/proyecto/proyectos-background1.png');
+    }
 }
 
 .xlc-proyectos-lista-section {
@@ -305,10 +373,11 @@
     .xlc-grid {
         margin-bottom: 5.5rem;
         grid-template-rows: auto;
-        grid-template-areas: 
-            "title title title title title title";
+        grid-template-areas: 'title title title title title title';
 
-        .xlc-title { grid-area: title; }
+        .xlc-title {
+            grid-area: title;
+        }
     }
 
     .xlc-projects-list {
@@ -327,27 +396,36 @@
 
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title ."
-            "subtitle subtitle subtitle subtitle subtitle subtitle";
+        grid-template-areas:
+            'title title title title title .'
+            'subtitle subtitle subtitle subtitle subtitle subtitle';
 
-        .xlc-title { grid-area: title; color: var(--xlc-white); }
-        .xlc-subtitle { grid-area: subtitle; color: var(--xlc-white); }
+        .xlc-title {
+            grid-area: title;
+            color: var(--xlc-white);
+        }
+        .xlc-subtitle {
+            grid-area: subtitle;
+            color: var(--xlc-white);
+        }
     }
 }
 
 .xlc-proyecto-info-section {
     .xlc-grid {
         grid-template-rows: auto auto;
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "description description description description description description . . descargas descargas descargas descargas";
-        
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'description description description description description description . . descargas descargas descargas descargas';
+
         padding-bottom: var(--xlc-header-height);
         align-content: stretch;
         height: 100%;
-        
-        .xlc-title { grid-area: title; }
+        row-gap: 1rem;
+
+        .xlc-title {
+            grid-area: title;
+        }
         .xlc-description {
             grid-area: description;
             align-self: end;
@@ -385,9 +463,8 @@
         padding: 2rem 0 2rem;
         border-top: 1px solid var(--xlc-gray);
 
-        grid-template-areas: 
-            "title title title . . . description description description description description description";
-        
+        grid-template-areas: 'title title title . . . description description description description description description';
+
         .xlc-destacado-title {
             grid-area: title;
             font-size: var(--xlc-m-font-size);
@@ -411,9 +488,9 @@
 
     .xlc-grid {
         padding-bottom: var(--xlc-section-top-padding);
-        grid-template-areas: 
-            "title title title . . . . . . . . ."
-            "description description description description description . . . . btn btn btn";
+        grid-template-areas:
+            'title title title . . . . . . . . .'
+            'description description description description description . . . . btn btn btn';
         row-gap: 1rem;
 
         .xlc-title {
@@ -425,7 +502,9 @@
             font-size: var(--xlc-s-font-size);
             line-height: var(--xlc-subtitles-line-height);
         }
-        .xlc-orange-btn { grid-area: btn; }
+        .xlc-orange-btn {
+            grid-area: btn;
+        }
     }
 }
 
@@ -434,9 +513,8 @@
 
     .xlc-grid {
         padding-bottom: var(--xlc-section-top-padding);
-        grid-template-areas: 
-            "title title title . . . description description description description description description";
-    
+        grid-template-areas: 'title title title . . . description description description description description description';
+
         .xlc-title {
             grid-area: title;
             font-size: var(--xlc-m-font-size);
@@ -453,17 +531,17 @@
     background-color: var(--xlc-beige);
 
     .xlc-grid {
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery";
-        
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery';
+
         .xlc-title {
             grid-area: title;
             font-size: var(--xlc-m-font-size);
         }
         .xlc-gallery-container {
             grid-area: gallery;
-            
+
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-auto-rows: 291.15px;
@@ -484,10 +562,10 @@
     padding-bottom: 10rem;
 
     .xlc-grid {
-        grid-template-areas: 
-            "title title title title title title . . . . . ."
-            "video video video video video video video video video video video video";
-        
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'video video video video video video video video video video video video';
+
         .xlc-title {
             grid-area: title;
             font-size: var(--xlc-m-font-size);
@@ -503,6 +581,40 @@
                 display: block;
                 width: 100% !important;
                 height: 100% !important;
+            }
+        }
+    }
+}
+
+.xlc-proyecto-video-youtube-section {
+    background-color: var(--xlc-beige);
+    padding-bottom: 10rem;
+
+    .xlc-grid {
+        grid-template-areas:
+            'title title title title title title . . . . . .'
+            'video video video video video video video video video video video video';
+
+        .xlc-title {
+            grid-area: title;
+            font-size: var(--xlc-m-font-size);
+        }
+
+        .xlc-video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            overflow: hidden;
+            max-width: 100%;
+            height: auto;
+
+            iframe,
+            object,
+            embed {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
         }
     }
