--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -601,6 +601,7 @@
         }
 
         .xlc-video-container {
+            grid-area: video;
             position: relative;
             padding-bottom: 56.25%;
             overflow: hidden;
